--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <ul class="list-group my-4"></ul>
     </div>
 
-    <script src="./js/index.js"></script>
+    <script src="./js/script.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
